rewrite comment with EUC-JP/JIS -> UTF-8

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,31 +1,31 @@
 #
 
-# е╜б╝е╣д╬░═┬╕┤╪╖╕е╒ебедеы (╝л╞░└╕└о)
+# уВ╜уГ╝уВ╣уБоф╛ЭхнШщЦвф┐ВуГХуВбуВдуГл (шЗкхЛХчФЯцИР)
 DEPS = Dependencies
 DEPENDENCIES_OUTPUT := $(DEPS)
 
-# ╔╕╜реыб╝еы
+# циЩц║ЦуГлуГ╝уГл
 include ../../etc/makerules
 
 #-----------------------------------------------------------------------------
 TARGET = tad2sj+
 
-# е╜б╝е╣е╒ебедеыд╬е╡б╝е┴е╤е╣
+# уВ╜уГ╝уВ╣уГХуВбуВдуГлуБоуВ╡уГ╝уГБуГСуВ╣
 S = ../src
 VPATH = $S
 
 HEADER := $(S) $(HEADER)
 
-# е╜б╝е╣е╒ебедеы
+# уВ╜уГ╝уВ╣уГХуВбуВдуГл
 SRC = loader.c parser.c jis2sjis.c main.c
 
 OBJ	= $(addsuffix .o, $(basename $(SRC)))
 WC_SRC	= $(filter %.C, $(SRC))
 
-# ─╔▓├ещеде╓ещеъ
+# ш┐╜хКауГйуВдуГЦуГйуГк
 LOADLIBES = -lapp
 
-# е│еєе╤едеыеке╫е╖ечеє
+# уВ│уГ│уГСуВдуГлуВкуГЧуВ╖уГзуГ│
 CFLAGS += -Wall
 
 #-----------------------------------------------------------------------------
@@ -46,7 +46,7 @@ install: $(addprefix $(EXE_INSTALLDIR)/, $(ALL))
 $(TARGET:%=$(EXE_INSTALLDIR)/%): $(EXE_INSTALLDIR)/%: %
 	$(EXE_INSTALL_STRIP)
 
-# е╜б╝е╣д╬░═┬╕┤╪╖╕
+# уВ╜уГ╝уВ╣уБоф╛ЭхнШщЦвф┐В
 $(WC_SRC:%.C=%.c):
 
 $(OBJ):
